--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_icons.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_icons.scss
@@ -40,3 +40,352 @@ $icomoon-icons: (
 @each $key, $char in $icomoon-icons {
 	.icomoon-icon-#{$key}:before { content: $char; }
 }
+
+
+
+
+$gizmo-icons: (
+
+	cursor: "\e900",
+	crosshair: "\e901",
+	search: "\e902",
+	zoomin: "\e903",
+	zoomout: "\e904",
+	view: "\e905",
+	attach: "\e906",
+	link: "\e907",
+	unlink: "\e908",
+	move: "\e909",
+	write: "\e90a",
+	writingdisabled: "\e90b",
+	erase: "\e90c",
+	compose: "\e90d",
+	lock: "\e90e",
+	unlock: "\e90f",
+	key: "\e910",
+	backspace: "\e911",
+	ban: "\e912",
+	smoking: "\e913",
+	nosmoking: "\e914",
+	trash: "\e915",
+	target: "\e916",
+	tag: "\e917",
+	bookmark: "\e918",
+	flag: "\e919",
+	like: "\e91a",
+	dislike: "\e91b",
+	heart: "\e91c",
+	star: "\e91d",
+	sample: "\e91e",
+	crop: "\e91f",
+	layers: "\e920",
+	layergroup: "\e921",
+	pen: "\e922",
+	bezier: "\e923",
+	pixels: "\e924",
+	phone: "\e925",
+	phonedisabled: "\e926",
+	touchtonephone: "\e927",
+	mail: "\e928",
+	inbox: "\e929",
+	outbox: "\e92a",
+	chat: "\e92b",
+	user: "\e92c",
+	users: "\e92d",
+	usergroup: "\e92e",
+	businessuser: "\e92f",
+	man: "\e930",
+	male: "\e931",
+	woman: "\e932",
+	female: "\e933",
+	raisedhand: "\e934",
+	hand: "\e935",
+	pointup: "\e936",
+	pointupright: "\e937",
+	pointright: "\e938",
+	pointdownright: "\e939",
+	pointdown: "\e93a",
+	pointdownleft: "\e93b",
+	pointleft: "\e93c",
+	pointupleft: "\e93d",
+	cart: "\e93e",
+	creditcard: "\e93f",
+	calculator: "\e940",
+	barchart: "\e941",
+	piechart: "\e942",
+	box: "\e943",
+	home: "\e944",
+	globe: "\e945",
+	navigate: "\e946",
+	compass: "\e947",
+	signpost: "\e948",
+	location: "\e949",
+	floppydisk: "\e94a",
+	database: "\e94b",
+	hdd: "\e94c",
+	microchip: "\e94d",
+	music: "\e94e",
+	headphones: "\e94f",
+	discdrive: "\e950",
+	volume: "\e951",
+	lowvolume: "\e952",
+	mediumvolume: "\e953",
+	highvolume: "\e954",
+	airplay: "\e955",
+	camera: "\e956",
+	picture: "\e957",
+	video: "\e958",
+	webcam: "\e959",
+	film: "\e95a",
+	playvideo: "\e95b",
+	videogame: "\e95c",
+	play: "\e95d",
+	pause: "\e95e",
+	stop: "\e95f",
+	record: "\e960",
+	rewind: "\e961",
+	fastforward: "\e962",
+	skipback: "\e963",
+	skipforward: "\e964",
+	eject: "\e965",
+	repeat: "\e966",
+	replay: "\e967",
+	shuffle: "\e968",
+	index: "\e969",
+	storagebox: "\e96a",
+	book: "\e96b",
+	notebook: "\e96c",
+	newspaper: "\e96d",
+	gridlines: "\e96e",
+	rows: "\e96f",
+	columns: "\e970",
+	thumbnails: "\e971",
+	mouse: "\e972",
+	usb: "\e973",
+	desktop: "\e974",
+	laptop: "\e975",
+	tablet: "\e976",
+	smartphone: "\e977",
+	cell: "\e978",
+	battery: "\e979",
+	highbattery: "\e97a",
+	mediumbattery: "\e97b",
+	lowbattery: "\e97c",
+	chargingbattery: "\e97d",
+	lightbulb: "\e97e",
+	washer: "\e97f",
+	downloadcloud: "\e980",
+	download: "\e981",
+	downloadbox: "\e982",
+	uploadcloud: "\e983",
+	upload: "\e984",
+	uploadbox: "\e985",
+	fork: "\e986",
+	merge: "\e987",
+	refresh: "\e988",
+	sync: "\e989",
+	loading: "\e98a",
+	file: "\e98b",
+	files: "\e98c",
+	addfile: "\e98d",
+	removefile: "\e98e",
+	checkfile: "\e98f",
+	deletefile: "\e990",
+	exe: "\e991",
+	zip: "\e992",
+	doc: "\e993",
+	pdf: "\e994",
+	jpg: "\e995",
+	png: "\e996",
+	mpthree: "\e997",
+	rar: "\e998",
+	gif: "\e999",
+	folder: "\e99a",
+	openfolder: "\e99b",
+	downloadfolder: "\e99c",
+	uploadfolder: "\e99d",
+	quote: "\e99e",
+	unquote: "\e99f",
+	print: "\e9a0",
+	copier: "\e9a1",
+	fax: "\e9a2",
+	scanner: "\e9a3",
+	printregistration: "\e9a4",
+	shredder: "\e9a5",
+	expand: "\e9a6",
+	contract: "\e9a7",
+	help: "\e9a8",
+	info: "\e9a9",
+	alert: "\e9aa",
+	caution: "\e9ab",
+	logout: "\e9ac",
+	login: "\e9ad",
+	scaleup: "\e9ae",
+	scaledown: "\e9af",
+	plus: "\e9b0",
+	hyphen: "\e9b1",
+	check: "\e9b2",
+	delete: "\e9b3",
+	notifications: "\e9b4",
+	notificationsdisabled: "\e9b5",
+	clock: "\e9b6",
+	stopwatch: "\e9b7",
+	alarmclock: "\e9b8",
+	egg: "\e9b9",
+	eggs: "\e9ba",
+	cheese: "\e9bb",
+	chickenleg: "\e9bc",
+	pizzapie: "\e9bd",
+	pizza: "\e9be",
+	cheesepizza: "\e9bf",
+	frenchfries: "\e9c0",
+	apple: "\e9c1",
+	carrot: "\e9c2",
+	broccoli: "\e9c3",
+	cucumber: "\e9c4",
+	orange: "\e9c5",
+	lemon: "\e9c6",
+	onion: "\e9c7",
+	bellpepper: "\e9c8",
+	peas: "\e9c9",
+	grapes: "\e9ca",
+	strawberry: "\e9cb",
+	bread: "\e9cc",
+	mug: "\e9cd",
+	mugs: "\e9ce",
+	espresso: "\e9cf",
+	macchiato: "\e9d0",
+	cappucino: "\e9d1",
+	latte: "\e9d2",
+	icedcoffee: "\e9d3",
+	coffeebean: "\e9d4",
+	coffeemilk: "\e9d5",
+	coffeefoam: "\e9d6",
+	coffeesugar: "\e9d7",
+	sugarpackets: "\e9d8",
+	capsule: "\e9d9",
+	capsulerecycling: "\e9da",
+	insertcapsule: "\e9db",
+	tea: "\e9dc",
+	teabag: "\e9dd",
+	jug: "\e9de",
+	pitcher: "\e9df",
+	kettle: "\e9e0",
+	wineglass: "\e9e1",
+	sugar: "\e9e2",
+	oven: "\e9e3",
+	stove: "\e9e4",
+	vent: "\e9e5",
+	exhaust: "\e9e6",
+	steam: "\e9e7",
+	steamplate: "\e9e8",
+	steamglass: "\e9e9",
+	steampot: "\e9ea",
+	dishwasher: "\e9eb",
+	toaster: "\e9ec",
+	microwave: "\e9ed",
+	electrickettle: "\e9ee",
+	refrigerator: "\e9ef",
+	freezer: "\e9f0",
+	utensils: "\e9f1",
+	cookingutensils: "\e9f2",
+	whisk: "\e9f3",
+	pizzacutter: "\e9f4",
+	measuringcup: "\e9f5",
+	colander: "\e9f6",
+	eggtimer: "\e9f7",
+	platter: "\e9f8",
+	plates: "\e9f9",
+	cups: "\e9fa",
+	pot: "\e9fb",
+	chef: "\e9fc",
+	weathervane: "\e9fd",
+	thermometer: "\e9fe",
+	thermometerup: "\e9ff",
+	thermometerdown: "\ea00",
+	droplet: "\ea01",
+	sunrise: "\ea02",
+	sunset: "\ea03",
+	sun: "\ea04",
+	cloud: "\ea05",
+	clouds: "\ea06",
+	partlycloudy: "\ea07",
+	rain: "\ea08",
+	rainheavy: "\ea09",
+	lightning: "\ea0a",
+	thunderstorm: "\ea0b",
+	umbrella: "\ea0c",
+	rainumbrella: "\ea0d",
+	rainbow: "\ea0e",
+	rainbowclouds: "\ea0f",
+	fog: "\ea10",
+	wind: "\ea11",
+	tornado: "\ea12",
+	snowflake: "\ea13",
+	snowcrystal: "\ea14",
+	lightsnow: "\ea15",
+	snow: "\ea16",
+	heavysnow: "\ea17",
+	hail: "\ea18",
+	crescentmoon: "\ea19",
+	waxingcrescentmoon: "\ea1a",
+	firstquartermoon: "\ea1b",
+	waxinggibbousmoon: "\ea1c",
+	waninggibbousmoon: "\ea1d",
+	lastquartermoon: "\ea1e",
+	waningcrescentmoon: "\ea1f",
+	fan: "\ea20",
+	bike: "\ea21",
+	wheelchair: "\ea22",
+	briefcase: "\ea23",
+	hanger: "\ea24",
+	comb: "\ea25",
+	medicalcross: "\ea26",
+	up: "\ea27",
+	upright: "\ea28",
+	right: "\ea29",
+	downright: "\ea2a",
+	down: "\ea2b",
+	downleft: "\ea2c",
+	left: "\ea2d",
+	upleft: "\ea2e",
+	navigateup: "\ea2f",
+	navigateright: "\ea30",
+	navigatedown: "\ea31",
+	navigateleft: "\ea32",
+	retweet: "\ea33",
+	share: "\ea34"
+
+);
+
+@font-face {
+	font-family: 'ss-gizmo';
+	src: url('#{$ss-gizmo-font-folder-path}/ss-gizmo.eot?y3hcw8');
+	src: url('#{$ss-gizmo-font-folder-path}/ss-gizmo.eot?y3hcw8#iefix') format('embedded-opentype'),
+	     url('#{$ss-gizmo-font-folder-path}/ss-gizmo.ttf?y3hcw8') format('truetype'),
+	     url('#{$ss-gizmo-font-folder-path}/ss-gizmo.woff?y3hcw8') format('woff'),
+	     url('#{$ss-gizmo-font-folder-path}/ss-gizmo.svg?y3hcw8#ss-gizmo') format('svg');
+	font-weight: normal;
+	font-style: normal;
+	font-display: block;
+}
+
+.gizmo-icon {
+	font-family: 'ss-gizmo' !important;
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+
+	@each $key, $color in $theme-colors {
+		&.#{$key} { color: $color; }
+	}
+}
+
+@each $key, $char in $gizmo-icons {
+	.gizmo-icon-#{$key}:before { content: $char; }
+}
