--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -126,6 +126,7 @@ $font-family-sans-serif-alt:  "semplicitapro", #{$font-family-sans-serif} !defau
 $font-family-serif:           "utopia-std", serif;
 
 $icomoon-font-folder-path:    "../fonts/icomoon" !default;
+$ss-gizmo-font-folder-path:   "../fonts/ss-gizmo" !default;
 
 $font-size-base:              1.25rem !default; // Assumes the browser default, typically `16px`
 $font-size-lg:                1.875rem !default;
