--- a/wp-content/plugins/crown-blocks/src/block-event-header/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-event-header/style.scss
@@ -85,6 +85,9 @@
 			width: 50%;
 			min-height: 20rem;
 		}
+		@media (min-width: 1200px) {
+			width: percentage(5 / 12);
+		}
 		> .container-bg {
 			background-color: #333;
 		}
@@ -157,8 +160,8 @@
 			padding-right: 2rem;
 		}
 		@media (min-width: 1200px) {
-			width: calc(100% + (3rem * 2));
-			left: calc(-100% - (3rem * 2) - 3rem);
+			width: calc((100% + (3rem * 2)) * (7 / 5));
+			left: calc((-100% - (3rem * 2)) * (7 / 5)  - 3rem);
 			padding-right: 3rem;
 			bottom: -1rem;
 		}
