Hiding button on click

--- a/wp-content/plugins/crown-blocks/src/block-button/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-button/style.scss
@@ -8,9 +8,7 @@ $spacer: 1rem;
 }
 
 .collapse.form-event-registration-zoom-meeting {
-	> .inner {
-		padding-top: 1rem;
-	}
+	margin-bottom: 2rem;
 	.gform_wrapper {
 		margin: 0;
 	}
