Moving button to the left

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_footer.scss
@@ -417,7 +417,7 @@ body {
 ---------------------------------------------------------*/
 
 #footer-primary-cta-links {
-	flex: 1 1 auto;
+	max-width: 18rem;
 	ul {
 		list-style: none;
 		margin: 0;
