--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -27006,9 +27006,7 @@ body {
 /*	Footer CTA Links
 ---------------------------------------------------------*/
 #footer-primary-cta-links {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto; }
+  max-width: 18rem; }
   #footer-primary-cta-links ul {
     list-style: none;
     margin: 0;
