--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -2212,6 +2212,17 @@
 					opacity: 0;
 				}
 			}
+			.overlay-languages {
+				text-transform: uppercase;
+				letter-spacing: .1;
+				font-weight: 500;
+				line-height: 1.2;
+				font-size: 1rem;
+				position: absolute;
+				right: 1rem;
+				bottom: .75rem;
+				color: #fff;
+			}
 		}
 		.entry-teaser {
 			flex: 1 1 auto;
