--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -19957,6 +19957,109 @@ nav.pagination {
   .alert-white .alert-link {
     color: #1d2124; }
 
+#referrer-notice {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #D11141;
+  color: #fff;
+  -webkit-transition: opacity .4s, visibility 0s .4s, -webkit-transform .4s ease-out;
+  transition: opacity .4s, visibility 0s .4s, -webkit-transform .4s ease-out;
+  transition: opacity .4s, visibility 0s .4s, transform .4s ease-out;
+  transition: opacity .4s, visibility 0s .4s, transform .4s ease-out, -webkit-transform .4s ease-out;
+  z-index: 9999999;
+  opacity: 0;
+  -webkit-transform: translateY(1rem);
+      -ms-transform: translateY(1rem);
+          transform: translateY(1rem);
+  padding: 1rem 1rem;
+  text-align: center; }
+  @media (min-width: 576px) {
+    #referrer-notice {
+      padding: 1rem 1rem; } }
+  @media (min-width: 768px) {
+    #referrer-notice {
+      padding: 1rem 1.5rem; } }
+  @media (min-width: 992px) {
+    #referrer-notice {
+      padding: 1rem 2rem; } }
+  @media (min-width: 1200px) {
+    #referrer-notice {
+      padding: 1rem 2.5rem; } }
+  @media (min-width: 768px) {
+    #referrer-notice {
+      text-align: left; } }
+  #referrer-notice.active {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transition-delay: 0s;
+            transition-delay: 0s;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none; }
+  @media (min-width: 768px) {
+    #referrer-notice > .inner {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; } }
+  #referrer-notice .message {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+    margin-bottom: .5rem; }
+    @media (min-width: 768px) {
+      #referrer-notice .message {
+        margin-right: 2rem;
+        margin-bottom: 0;
+        padding-left: 2rem;
+        position: relative; } }
+    #referrer-notice .message:before {
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      font-weight: normal;
+      line-height: 1;
+      font-family: FontAwesome;
+      content: "\f05a";
+      font-size: 1.5rem;
+      position: absolute;
+      left: 0;
+      top: .1rem;
+      display: none;
+      opacity: .5; }
+      @media (min-width: 768px) {
+        #referrer-notice .message:before {
+          display: block; } }
+  #referrer-notice .actions {
+    margin: -2px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    #referrer-notice .actions .btn, #referrer-notice .actions nav.pagination .nav-links .page-numbers, nav.pagination .nav-links #referrer-notice .actions .page-numbers, #referrer-notice .actions .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link #referrer-notice .actions a, #referrer-notice .actions .wp-block-crown-blocks-featured-post-slider article .entry-link a, .wp-block-crown-blocks-featured-post-slider article .entry-link #referrer-notice .actions a, #referrer-notice .actions #header-primary-cta-links a, #header-primary-cta-links #referrer-notice .actions a, #referrer-notice .actions #header-primary-navigation-menu .mega-sub-menu .sub-menu-cta-links a, #header-primary-navigation-menu .mega-sub-menu .sub-menu-cta-links #referrer-notice .actions a, #referrer-notice .actions #footer-primary-cta-links a, #footer-primary-cta-links #referrer-notice .actions a, #referrer-notice .actions #mobile-menu-primary-cta-links a, #mobile-menu-primary-cta-links #referrer-notice .actions a, #referrer-notice .actions #mobile-menu-primary-navigation-menu .mega-sub-menu .sub-menu-cta-links a, #mobile-menu-primary-navigation-menu .mega-sub-menu .sub-menu-cta-links #referrer-notice .actions a, #referrer-notice .actions .gform_footer button[type=submit], .gform_footer #referrer-notice .actions button[type=submit], #referrer-notice .actions .gform_page_footer .gform_next_button, .gform_page_footer #referrer-notice .actions .gform_next_button,
+    #referrer-notice .actions .gform_page_footer .gform_previous_button, .gform_page_footer #referrer-notice .actions .gform_previous_button,
+    #referrer-notice .actions .gform_page_footer button[type=submit], .gform_page_footer #referrer-notice .actions button[type=submit] {
+      margin: 2px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+
 .modal {
   line-height: 1.4; }
   .modal button.close {
