--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_alerts.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_alerts.scss
@@ -22,3 +22,72 @@
 		@include alert-variant(mix($value, #fff, 10%), $value, color-yiq(mix($value, #fff, 10%)));
 	}
 }
+
+
+#referrer-notice {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	background-color: $red;
+	color: #fff;
+	transition: opacity .4s, visibility 0s .4s, transform .4s ease-out;
+	z-index: 9999999;
+	opacity: 0;
+	transform: translateY(1rem);
+	padding: 1rem map-get($container-padding-x, xs);
+	text-align: center;
+	@include media-breakpoint-up(sm) { padding: 1rem map-get($container-padding-x, sm); }
+	@include media-breakpoint-up(md) { padding: 1rem map-get($container-padding-x, md); }
+	@include media-breakpoint-up(lg) { padding: 1rem map-get($container-padding-x, lg); }
+	@include media-breakpoint-up(xl) { padding: 1rem map-get($container-padding-x, xl); }
+	@include media-breakpoint-up(md) {
+		text-align: left;
+	}
+	&.active {
+		opacity: 1;
+		visibility: visible;
+		transition-delay: 0s;
+		transform: none;
+	}
+	> .inner {
+		@include media-breakpoint-up(md) {
+			display: flex;
+			align-items: center;
+			flex-wrap: wrap;
+		}
+	}
+	.message {
+		flex: 1 1 auto;
+		margin-bottom: .5rem;
+		@include media-breakpoint-up(md) {
+			margin-right: 2rem;
+			margin-bottom: 0;
+			padding-left: 2rem;
+			position: relative;
+		}
+		&:before {
+			@include icon(fa-content($fa-var-info-circle));
+			font-size: 1.5rem;
+			position: absolute;
+			left: 0;
+			top: .1rem;
+			display: none;
+			opacity: .5;
+			@include media-breakpoint-up(md) {
+				display: block;
+			}
+		}
+	}
+	.actions {
+		margin: -2px;
+		display: flex;
+		justify-content: center;
+		.btn {
+			margin: 2px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+	}
+}
